<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        
    </LinearLayout>
          
    <LinearLayout  
       android:layout_width="fill_parent"  
       android:orientation="vertical"              
       android:layout_height="fill_parent"
       android:layout_marginTop="50dip" >  
  
            <TextView  
                android:id="@+id/SubmitInstructionsText"  
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content"  
                android:text="@string/submit_instructions"  
                android:textSize="10pt"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
            />  
            
            <EditText  
                android:id="@+id/AddressEditView"  
                android:layout_height="wrap_content"  
                android:hint="@string/feedback_address"  
                android:inputType="textPersonName"  
                android:layout_width="fill_parent"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
            />
            
            <Spinner  
                android:id="@+id/FeedbackTypeSpinner"  
                android:layout_height="wrap_content"  
                android:prompt="@string/feedback_type"  
                android:layout_width="fill_parent"  
                android:entries="@array/feedback_type_list"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"                
            />
            
            <EditText  
                android:id="@+id/FeedbackBodyEditText"  
                android:layout_height="wrap_content"  
                android:hint="@string/feedback_body"  
                android:inputType="textMultiLine"  
                android:lines="20"  
                android:layout_width="fill_parent"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
            />
            
            <CheckBox  
                android:id="@+id/FeedbackResponseCheckBox"  
                android:layout_height="wrap_content"  
                android:text="@string/feedback_response"  
                android:layout_width="fill_parent"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"                
            />
            
            <Button  
                android:id="@+id/SendFeedbackButton"  
                android:layout_height="wrap_content"  
                android:text="@string/feedback_button"  
                android:onClick="onClickSendFeedback"  
                android:layout_width="fill_parent"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"  
            />        
  
    </LinearLayout>
              
</LinearLayout>
